Renderer line 26 LOGIC ERR: Renderer calls Window tries to create the window without GL context, because it has not been initialized in Engine yet